@@ -156,25 +156,24 @@ coot::multi_build_terminal_residue_addition::start_from_map(const coot::protein_
       mmdb::Residue *r_prev = util::get_previous_residue(residue_spec_t(r), mol);
       float b_fact = 30.0;
       int n_trials = 20010; // 20000 is a reasonable minimal number
+      n_trials = 100;
 
-      if (true) {
-	 minimol::fragment fC =
-	    forwards_2018(iseed, r, r_prev, "A", b_fact, n_trials, geom, xmap, mv, debugging);
-	 if (fC.n_filled_residues() > 2) { // needs tweaking
-	    int build_dir = 1;
-	    add_to_fragment_store(fC, build_dir);
-	 }
+      minimol::fragment fC =
+         forwards_2018(iseed, r, r_prev, "A", b_fact, n_trials, geom, xmap, mv, debugging);
+      if (fC.n_filled_residues() > 2) { // needs tweaking
+         int build_dir = 1;
+         add_to_fragment_store(fC, build_dir);
+      }
 
-	 if (false) { // debug
-	    std::string file_name = "trace-frag-forward-build-from-seed-";
-	    file_name += util::int_to_string(iseed);
-	    file_name += ".pdb";
-	    minimol::molecule mmm_out(fC);
-	    // add cell from map
-	    mmm_out.set_cell(acell);
-	    mmm_out.set_spacegroup(spacegroup_str_hm);
-	    mmm_out.write_file(file_name, 10);
-	 }
+      if (true) { // debug
+         std::string file_name = "trace-frag-forward-build-from-seed-";
+         file_name += util::int_to_string(iseed);
+         file_name += ".pdb";
+         minimol::molecule mmm_out(fC);
+         // add cell from map
+         mmm_out.set_cell(acell);
+         mmm_out.set_spacegroup(spacegroup_str_hm);
+         mmm_out.write_file(file_name, 10);
       }
 
       if (true) {
@@ -192,7 +191,7 @@ coot::multi_build_terminal_residue_addition::start_from_map(const coot::protein_
 	 minimol::fragment fN =
 	    backwards_2018(iseed, r, r_next, "A", b_fact, n_trials, geom, xmap, mv, debugging);
 
-	 if (false) { // debug
+	 if (true) { // debug
 	    std::string file_name = "trace-frag-backwards-build-from-seed-";
 	    file_name += util::int_to_string(iseed);
 	    file_name += ".pdb";
@@ -230,14 +229,14 @@ coot::multi_build_terminal_residue_addition::start_from_map(const coot::protein_
       mmm.fragments.push_back(frag);
    }
 
-   // mmm.write_file("built.pdb", 20.0);
+   mmm.write_file("built.pdb", 20.0);
    mmdb::Manager *mol = mmm.pcmmdbmanager();
    clipper::MMDBfile* mmdbfile = static_cast<clipper::MMDBfile*>(mol);
    clipper::MiniMol mm;
    mmdbfile->import_minimol(mm);
    bool r = ProteinTools::globularise(mm);
    mmdbfile->export_minimol(mm);
-   mol->WritePDBASCII("built.pdb");
+   mol->WritePDBASCII("built-2.pdb");
 
 }
 
